--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^2.9.9"
   },
   "dependencies": {
-    "daisyui": "^2.19.0"
+    "daisyui": "^2.19.0",
+    "svelte-navigator": "^3.1.6"
   }
 }
